# juniper-cascor

./: .coverage  .env.enc  .env.example  .gitignore  .markdownlint.json  .markdownlint.jsonc  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  claudey  cly  comp  coverage.xml  pyproject.toml  try
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  lockfile-update.yml  publish.yml  scheduled-tests.yml  security-scan.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
conf/: __date_functions.conf  __git_log_weeks.conf  common.conf  common_functions.conf  conda_environment-ORIG_0.0.yaml  conda_environment-ORIG_0.1.yaml  conda_environment-ORIG_0.2.yaml  conda_environment.yaml  docker-compose.yaml  get_code_stats.conf  get_code_stats_functions.conf  get_file_lines.conf  get_file_todo.conf  get_file_todo_functions.conf  get_module_filenames.conf  get_module_filenames_functions.conf  get_script_path.conf  get_script_path_functions.conf  get_todo_comments.conf  get_todo_comments_functions.conf  git_branch_ages.conf  init.conf  juniper_cascor.conf  juniper_cascor_functions.conf  last_mod_update.conf  logging.conf  logging_colors.conf  logging_config.yaml  logging_functions.conf  random_seed.conf  requirements-pip.txt  requirements.txt  run_all_tests.conf  save_to_usb.conf  script_util.cfg  source_tree.conf  todo_search.conf  update_weekly.conf
conf/temp/: Dockerfile  change_path.conf  conda_env_update.conf  conda_environment.yaml  create_performance_profile.conf  docker-compose.yaml  juniper_canopy.conf  logging_config.yaml  random_seed.conf  requirements.txt  setup_environment.conf
data/2_spiral-3_rotations/: 2_spiral_dataset-3_rotations-testing_set.pt  2_spiral_dataset-3_rotations-training_set.pt  2_spiral_dataset-3_rotations-validation_set.pt  2_spiral_dataset-3_rotations.pt
data/4_spiral-5_rotations/: 4_spiral_dataset-5_rotations-testing_set.pt  4_spiral_dataset-5_rotations-training_set.pt  4_spiral_dataset-5_rotations-validation_set.pt  4_spiral_dataset-5_rotations.pt
data/5_spiral-3_rotations/: 5_spiral_dataset-3_rotations-testing_set.pt  5_spiral_dataset-3_rotations-training_set.pt  5_spiral_dataset-3_rotations-validation_set.pt
data/8_spiral-3_rotations/: 8_spiral_dataset-3_rotations-testing_set.pt  8_spiral_dataset-3_rotations-training_set.pt  8_spiral_dataset-3_rotations-validation_set.pt
docs/: DOCUMENTATION_AUDIT.md  DOCUMENTATION_OVERVIEW.md  branch-protection.md  index.md
docs/api/: api-reference.md  api-schemas.md
docs/ci/: environment-setup.md  manual.md  quick-start.md  reference.md
docs/install/: environment-setup.md  quick-start.md  reference.md  user-manual.md
docs/overview/: constants-guide.md
docs/source/: environment-setup.md  manual.md  quick-start.md  reference.md
docs/testing/: environment-setup.md  manual.md  quick-start.md  reference.md  selective-testing-guide.md
juniper_cascor/: __init__.py
notes/: ANALYSIS_COMPLETE.md  API_REFERENCE.md  ARCHITECTURE_GUIDE.md  BOX_DRAWING_ASCII.md  CASCOR_ENHANCEMENTS_ROADMAP.md  CASCOR_JUNIPER_DATA_INTEGRATION_PLAN.md  CHANGES_FOR_REVIEW.md  CI_COVERAGE_GATE_PLAN.md  CI_PIPELINE_DEVELOPMENT_PLAN.md  CODEBASE_ANALYSIS_2026-03-12.md  CODE_REVIEW_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  CONDA_DEPENDENCY_FILE_HEADER.md  CRITICAL_FIXES_REQUIRED.md  Current_Issues.md  DECOUPLE_CANOPY_FROM_CASCOR_PLAN.md  DEPENDENCY_UPDATE_WORKFLOW.md  DEVELOPMENT_ROADMAP.md  FEATURES_GUIDE.md  FINAL_STATUS.md  FIX_PLAN_flake8_test_lint_2026-03-13.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_DEVELOPMENT_PLAN.md  INTEGRATION_ROADMAP-01.md  INTEGRATION_ROADMAP.md  JUNIPER-CASCOR_POST-RELEASE_DEVELOPMENT-ROADMAP.md  JUNIPER_CASCOR_SPIRAL_DATA_GEN_REFACTOR_PLAN.md  MONOREPO_ANALYSIS.md  ORACLE_ANALYSIS_PYTHON.md  ORACLE_ANALYSIS_SCRIPTS.md  P0_FIXES_IMPLEMENTED.md  P1_FIXES_COMPLETE.md  P2_ENHANCEMENTS_PLAN.md  PHASE1_COMPLETE.md  PHASE2_SERVICE_API_PLAN.md  PIP_DEPENDENCY_FILE_HEADER.md  PLOTTING_REGRESSION_FIX.md  POLYREPO_MIGRATION_PLAN-STALE.md  (+30 more)
notes/history/: CASCOR_ENHANCEMENTS_ROADMAP.md  CHANGES_FOR_REVIEW.md  COMPLETE_FIX_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ROADMAP.md  JUNIPER-CASCOR_POST-RELEASE_DEVELOPMENT-ROADMAP_2026-02-24.md  JUNIPER_CASCOR_SPIRAL_DATA_GEN_REFACTOR-001.md  JUNIPER_CASCOR_SPIRAL_DATA_GEN_REFACTOR-002.md  JUNIPER_CASCOR_SPIRAL_DATA_GEN_REFACTOR-003.md  JUNIPER_CASCOR_SPIRAL_DATA_GEN_REFACTOR_PLAN.md  NEXT_STEPS.md  Oracle_analysis_2026-01-26.md  P0_FIXES_IMPLEMENTED.md  P1_FIXES_COMPLETE.md  PRE-DEPLOYMENT_ROADMAP.md  PROJECT_ANALYSIS.md  README_FIXES.md  ROADMAP_METHODOLOGY.md  SERIALIZATION_FIXES_SUMMARY.md  TEST_SUITE_AUDIT_CASCOR_AMP.md  TEST_SUITE_CICD_ENHANCEMENT_DEVELOPMENT_PLAN.md  TEST_SUITE_CICD_ENHANCEMENT_DEVELOPMENT_PLAN_CLAUDE.md
notes/prompts/: prompt-001_juniper-cascor_2026-02-21.md  prompt-002_juniper-cascor_2026-02-21.md  prompt-003_juniper-cascor_2026-02-22.md
notes/pull_requests/: PR_SECURITY_HARDENING_2026-03-03.md  PR_full_branch_spiral_gen_extract_pre_deploy.md  PR_spiral_gen_extract_pre_deploy.md
notes/setup_config_guides/: activate_cicd_pre-commit_checks.md  claude-code-exa-setup-guide.md  install_juniper_data.md
notes/templates/: TEMPLATE_DEVELOPMENT_ROADMAP.md  TEMPLATE_ISSUE_TRACKING.md
reports/: coverage.xml
scripts/: check_doc_links.py  default_interactive_session_claude_code.bash  wake_the_claude.bash
src/: .coverage  coverage.xml  main.py  server.py
src/api/: __init__.py  (+5 more)
util/: box_drawing_lookup.py  check_multiprocess_forkserver.bash  check_multiprocess_start.bash  display_object_attributes.py  get_code_stats.bash  impatient_testing.bash  juniper_cascor.bash  last_mod_update-ORIG.bash  last_mod_update-local.bash  make.bash  new_random_seed.py  no_canopy.bash  path_overlap.bash  pytest_setup.py  run_all_tests.bash  run_tests.bash  script_util.cfg  try.bash
(+270 files in other folders)
